--- a/package.json
+++ b/package.json
@@ -9,29 +9,30 @@
     "test": "jest"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "mysql2": "^3.6.0",
-    "sequelize": "^6.32.1",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "joi": "^17.9.2",
-    "winston": "^3.10.0",
-    "winston-daily-rotate-file": "^4.7.1",
-    "helmet": "^7.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "express-rate-limit": "^6.8.1",
-    "passport": "^0.6.0",
-    "passport-google-oauth20": "^2.0.0",
-    "passport-facebook": "^3.0.0",
-    "passport-jwt": "^4.0.1",
-    "multer": "^1.4.5-lts.1",
     "express-validator": "^7.0.1",
-    "morgan": "^1.10.0"
+    "helmet": "^7.0.0",
+    "joi": "^17.9.2",
+    "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.6.0",
+    "passport": "^0.6.0",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-jwt": "^4.0.1",
+    "sequelize": "^6.32.1",
+    "sharp": "^0.34.3",
+    "winston": "^3.10.0",
+    "winston-daily-rotate-file": "^4.7.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1",
     "jest": "^29.6.1",
+    "nodemon": "^3.0.1",
     "supertest": "^6.3.3"
   }
 }
